# atlas

./: .gitignore  entrypoint.sh  manage.py  pyproject.toml
atlas/: __init__.py  admin.py  asgi.py  authentication.py  celery.py  exception.py  response.py  settings.py  urls.py  utils.py  views.py  wsgi.py
atlas/feeds/: __init__.py  base.py  chronological.py  ranked.py  trending.py
atlas/fixtures/: configs.json  names.json
atlas/migrations/: 0001_initial.py  0002_otprequest.py  0003_alter_otprequest_user.py  0004_user_verified_at.py  0005_attachment.py  0006_user_avatar.py  0007_outlet.py  0008_dish.py  0009_foodtale.py  0010_foodtalephoto.py  0011_foodtale_liked_food_tales_count_foodtalelike.py  0012_remove_foodtale_is_public_foodtale_visibility.py  0013_user_followers_count_user_following_count_and_more.py  0014_alter_foodtale_visibility.py  0015_user_username.py  0016_alter_user_username.py  0017_remove_foodtale_dish_remove_foodtale_outlet_and_more.py  0018_tale_talephoto_talelike.py  0019_config.py  0020_rename_tales_count_fields.py  0021_rename_food_tales_count_user_tales_count.py  0022_tale_photo_delete_talephoto.py  0023_tale_published_at.py  0024_alter_tale_visibility.py  0025_alter_tale_visibility.py  0026_user_city.py  0027_user_feed_type.py
atlas/models/: __init__.py  attachment.py  choices.py  config.py  dish.py  follower.py  food_tale.py  otp_request.py  outlet.py  tale.py  user.py
atlas/services/: __init__.py  attachment_meta_service.py  base.py  create_tale_service.py  google_map_city_search_service.py  google_map_place_detail_service.py  (+4 more)
(+25 files in other folders)
