[project]
name = "atlas"
version = "0.1.1"
description = "Core Engine for FoodTale Application"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.43.24",
    "celery>=5.6.3",
    "django>=6.0.6",
    "djangorestframework>=3.17.1",
    "gunicorn>=26.0.0",
    "httpx>=0.28.1",
    "pillow>=12.2.0",
    "psycopg>=3.3.4",
    "python-dotenv>=1.2.2",
    "redis>=8.0.0",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-django>=4.12.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "atlas.settings"
addopts = [
  "--cov=atlas",
]
